@@ -596,17 +596,17 @@ enum {
     RUBY_STACK_MIN_LIMIT = 512 * 1024, /* 512KB */
 #endif
     RUBY_STACK_SPACE_LIMIT = 1024 * 1024,
-#ifdef PTHREAD_STACK_MIN
-    RUBY_STACK_MIN = ((RUBY_STACK_MIN_LIMIT < PTHREAD_STACK_MIN) ?
-		      PTHREAD_STACK_MIN * 2 : RUBY_STACK_MIN_LIMIT),
-#else
-    RUBY_STACK_MIN = (RUBY_STACK_MIN_LIMIT),
-#endif
-    RUBY_STACK_SPACE_RATIO = 5,
-    RUBY_STACK_MIN_SPACE = RUBY_STACK_MIN/RUBY_STACK_SPACE_RATIO,
-    RUBY_STACK_SPACE = ((RUBY_STACK_MIN_SPACE > RUBY_STACK_SPACE_LIMIT) ?
-			RUBY_STACK_SPACE_LIMIT : RUBY_STACK_MIN_SPACE)
+    RUBY_STACK_SPACE_RATIO = 5
 };
+#ifdef PTHREAD_STACK_MIN
+#define RUBY_STACK_MIN ((RUBY_STACK_MIN_LIMIT < PTHREAD_STACK_MIN) ? \
+			PTHREAD_STACK_MIN * 2 : RUBY_STACK_MIN_LIMIT)
+#else
+#define RUBY_STACK_MIN (RUBY_STACK_MIN_LIMIT)
+#endif
+#define RUBY_STACK_MIN_SPACE RUBY_STACK_MIN/RUBY_STACK_SPACE_RATIO
+#define RUBY_STACK_SPACE ((RUBY_STACK_MIN_SPACE > RUBY_STACK_SPACE_LIMIT) ? \
+			  RUBY_STACK_SPACE_LIMIT : RUBY_STACK_MIN_SPACE)
 
 #ifdef STACK_END_ADDRESS
 extern void *STACK_END_ADDRESS;
